--- a/5.11作业/5.11style.css
+++ b/5.11作业/5.11style.css
@@ -1,13 +1,13 @@
-.layout {
+.zuoye {
     width: 600px;
     margin: 0 auto;
 }
 
-.layout>div {
+.zuoye>div {
     margin-top: 30px;
 }
 
-.h-button {
+.button {
     display: inline-block;
     padding: 8px 10px;
     text-decoration: none;
@@ -17,7 +17,7 @@
     transition: all .3s;
 }
 
-.h-button:hover {
+.button:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
